oey added to About Numberbank

--- a/shiny_app/about.html
+++ b/shiny_app/about.html
@@ -73,6 +73,13 @@ div.desc {
 	  <div class="desc"><h4><a href = "https://web.stanford.edu/~mcfrank/">Mike Frank</a></h4></div>
 	</div>
 </div>
+
+<div class = "responsive">
+	<div class="gallery">
+	    <img src="img/oey.png" alt="Oey" style="width:250px">
+	  <div class="desc"><h4><a href = "https://la-oey.github.io/">Lauren Oey</a></h4></div>
+	</div>
+</div>
 </center>
 
 <div class="clearfix"></div>
