updated home page and uploading new data

--- a/shiny_app/home.html
+++ b/shiny_app/home.html
@@ -1,10 +1,12 @@
 <html>
 <body>
 <div>
-  	<img src = "img/fishwithears.png" style="width:200px">
-    <h2>numberbank<br><span class="text-muted">A flexible and reproducible interface to developmental number acquisition datasets
-		</span></h2>
+    <div id="descrLg" class="text-muted nbDescrip">A flexible and reproducible interface to developmental number acquisition datasets
+	</div><br><br>
+	<div id="descrSm" class="text-muted nbDescrip">Numberbank contains data from 3200+ children, across 13+ languages
 	</div>
+</div>
+<span id="descrImg"><img src = "img/langPlot.png" style="width:650px"></span>
 </body>
 </html>
 <!-- /END THE FEATURETTES -->
