updated theme css and dropdown menus

--- a/shiny_app/about.html
+++ b/shiny_app/about.html
@@ -49,75 +49,43 @@ div.desc {
 </style>
 </head>
 <body>
-<div>
-		<h3>The numberbank team</h3>
+	<div>
+		<h3>The Numberbank Team</h3>
 		<center>
 			<br>
-<div class = "responsive">
-	<div class="gallery">
-	    <img src="img/oey.png" alt="Oey" style="width:250px">
-	  <div class="desc"><h4><a href = "https://la-oey.github.io/">Lauren Oey</a></h4></div>
+			<div class = "responsive">
+				<div class="gallery">
+					<img src="img/oey.png" alt="Oey" style="width:250px">
+					<div class="desc"><h4><a href = "https://la-oey.github.io/">Lauren Oey</a></h4></div>
+				</div>
+			</div>
+
+			<div class = "responsive">
+				<div class="gallery">
+					<img src="img/schneider.jpeg" alt="Schneider" style="width:250px">
+					<div class="desc"><h4><a href = "https://rosemschneider.github.io/">Rose Schneider</a></h4></div>
+				</div>
+			</div>
+
+			<div class = "responsive">
+				<div class="gallery">
+					<img src="img/barner.jpeg" alt="Barner" style="width:250px">
+					<div class="desc"><h4><a href = "https://www.ladlab.com/barner">David Barner</a></h4></div>
+				</div>
+			</div>
+
+			<div class = "responsive">
+				<div class="gallery">
+					<img src="img/mike.jpg" alt="Frank" style="width:250px">
+					<div class="desc"><h4><a href = "https://web.stanford.edu/~mcfrank/">Mike Frank</a></h4></div>
+				</div>
+			</div>
+
+		</center>
+
+		<div class="clearfix"></div>
+
 	</div>
-</div>
-
-<div class = "responsive">
-	<div class="gallery">
-	    <img src="img/schneider.jpeg" alt="Schneider" style="width:250px">
-	  <div class="desc"><h4><a href = "https://rosemschneider.github.io/">Rose Schneider</a></h4></div>
-	</div>
-</div>
-
-<div class = "responsive">
-	<div class="gallery">
-	    <img src="img/barner.jpeg" alt="Barner" style="width:250px">
-	  <div class="desc"><h4><a href = "https://www.ladlab.com/barner">David Barner</a></h4></div>
-	</div>
-</div>
-
-<div class = "responsive">
-	<div class="gallery">
-	    <img src="img/mike.jpg" alt="Frank" style="width:250px">
-	  <div class="desc"><h4><a href = "https://web.stanford.edu/~mcfrank/">Mike Frank</a></h4></div>
-	</div>
-</div>
-</center>
-
-<div class="clearfix"></div>
-
-
-
-
-
-<!-- 
-    <div class="row">
-	  	<div class="column">
-	    <div class="card">
-	      <img src="img/schneider.jpeg" alt="Schneider" style="width:200px">
-	      <div class="container">
-	        <h4><a href = "https://rosemschneider.github.io/">Rose Schneider</a></h4>
-	      </div>
-	    </div>
-	  </div>
-
-	  <div class="column">
-	    <div class="card">
-	      <img src="img/barner.jpeg" alt="Barner" style="width:200px">
-	      <div class="container">
-	        <h4><a href = "https://www.ladlab.com/barner">David Barner</a></h4>
-	      </div>
-	    </div>
-	  </div>
-	  
-	  <div class="column">
-	    <div class="card">
-	      <img src="img/mike.jpg" alt="Frank" style="width:200px">
-	      <div class="container">
-	       	<h4><a href = "https://web.stanford.edu/~mcfrank/">Mike Frank</a></h4>
-	      </div>
-	    </div>
-	  </div>
-	</div> -->
-</div>
 </body>
 
 </html>
