--- a/shiny_app/home.html
+++ b/shiny_app/home.html
@@ -1,12 +1,18 @@
 <html>
 <body>
-<div>
-    <div id="descrLg" class="text-muted nbDescrip">A flexible and reproducible interface to developmental number acquisition datasets
-	</div><br><br>
-	<div id="descrSm" class="text-muted nbDescrip">Numberbank contains data from 3200+ children, across 13+ languages
+<div id="homeContent">
+    <div id="descrLg" class="text-muted nbDescrip">Collaborative Database of Children's Numerical Language
+	</div><br>
+	<div class="text-muted nbDescrip descrSm">Numberbank includes data from 3200+ children, across 13+ languages
+	</div>
+	<img id="descrImg" src = "img/dotsLogoStatic.png">
+	<div class="text-muted descrSm">
+		NumberBank aggregates anonymized numeracy data from children around the world, allowing researchers to contribute, download, and analyze large and diverse datasets.
+	</div>
+	<div class="text-muted descrSm">
+		NumberBank operates in collaboration with the ManyNumbers consortium of 100+ international researchers interested in early numerical development.
 	</div>
 </div>
-<span id="descrImg"><img src = "img/langPlot.png" style="width:650px"></span>
 </body>
 </html>
 <!-- /END THE FEATURETTES -->
