--- a/shiny_app/about_given.html
+++ b/shiny_app/about_given.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html>
 <body>
+	
 <div data-role='header'>
-	<h2>About Number Acquisition and the Give-N Task</h2>
+	<h2>About NumberBank</h2>
 </div>
     
 <div>
-	<h3>Number Acquisition</h3>
-	<p>While children begin to recite the count list at a very young age (usually by around 2 years; Fuson, 1988), it takes them several years to learn the meanings of the individual words in the count list. For instance, if you ask 2-year-old who can count up to 10 for a set of 3 items, they will give you a random handful.
+	<h3>Number Development</h3>
+	<p>While children begin to recite the count list at a very young age (usually by around 2 years; Fuson, 1988), it takes them several years to learn the meanings of the individual words in the count list. For instance, if you ask 2-year-old who can count up to 10 for a set of 3 items, they will give you a random handful. Initially, children can recite a rote count list, like the alphabet. This ability to recite the count list is often measured by the “Highest Count” task.
 	</p>
-	<p>Instead of learning the meanings of all these number words at once, children begin by learning them one at a time over the course of several months. At around 2.5  years, children learn the meaning of "one," such that they can generate a set of <i>one</i> when requested, but still give randomly for other numbers. Some months later, children learn the meaning of "two," and then "three" a few months after that. During this time, children are called "subset-knowers," meaning that they understand only a subset of the number words in their count list. Additionally, even though subset-knowers still recite the count list, they do not reliably use it to generate these known numbers, indicating that they do not fully understand the relation between counting and cardinality.</p>
-	<p>Around 3.5-4 years, children discover how to use counting to generate sets of any number, meaning that they no longer need to learn the meanings of number words one by one. At this point, children are called Cardinal Principle (or CP)-knowers, meaning that they understand how the last word said while counting indicates the cardinality of a set (Gelman & Gallistel, 1978).</p>
+	<p>Instead of learning the meanings of all these number words at once, children begin by learning them one at a time over the course of several months. At around 2.5 years, children learn the meaning of "one," and can give one thing when asked, but still give random amounts for other numbers. Some months later, children learn the meaning of "two," and then "three" a few months after that. During this time, children are called "subset-knowers," because they understand only a subset of the number words in their count list. Also, even though subset-knowers are often very good at reciting the count list, they do not reliably use it to count numbers they know, suggesting that they don’t understand how counting represents number.
+	</p>
+	<p>Around 3.5 to 4 years, children discover how to use counting to generate large numbers, and no longer need to learn the meanings of number words one by one. At this point, children are called Cardinal Principle (or CP)-knowers, meaning that they understand how the last word said while counting indicates the cardinality of a set (Gelman & Gallistel, 1978).
+	</p>
 	<center><img src = "img/number_acq.png" style="width:800px"></center>
 
 	<h3>About Give-N</h3>
-	<p>The Give-N task (Wynn, 1990), allows researchers to measure what children know about the meanings of number words and counting. In this task, an experimenter asks children to generate a set of <i>N</i> items. For example, in a typical session the experimenter might ask children to "Put <i>three</i> bananas on the plate." The researcher continues asking for different numbers until they find the largest set for which children can reliably generate a set. For example, a child who can only generate sets of 1 and 2 is a "two-knower," while a child who can generate sets of 5+ is generally classified as a "CP-knower."</p>
+	<p>The Give-a-Number task (Wynn, 1990), allows researchers to measure what children know about the meanings of number words and counting. In this task, an experimenter asks children to generate a set of <i>N</i> items. For example, in a typical session the experimenter might ask children to "Put <i>three</i> bananas on the plate." The researcher continues asking for different numbers until they find the largest set for which children can reliably generate a set. For example, a child who can only generate sets of 1 and 2 is a "two-knower," while a child who can generate sets of 5+ is generally classified as a "CP-knower."
+	</p>
+	<p>Numberbank aggregates Give-N data from many labs. It represents the knower levels that children have attained at different ages and in different languages. Also, it represents how they respond to individual trials during the task – e.g., how many objects they give when asked for “three”. Children are classified into the following knower levels:
+	</p>
+	<p class="knowers">Non-Knowers: Children who don’t know the meanings of any number words</p>
+	<p class="knowers">One-Knowers: Children who have an exact label for sets of up to one
+</p>
+	<p class="knowers">Two-Knowers: Children who have an exact label for sets of up to two</p>
+	<p class="knowers">Three-Knowers: Children who have an exact label for sets of up to three</p>
+	<p class="knowers">Four-Knowers: Children who have an exact label for sets of up to four</p>
+	<p class="knowers">Five-Knowers: Children who have an exact label for sets of up to five</p>
+	<p class="knowers">Cardinal Principle Knowers: Children who can reliably count and give sets larger than 4 or 5 (depending on how this is defined in a particular study)</p>
 
-	<h4>References</h4>
+	<h3>About Highest Count</h3>
+	<p>In the Highest Count task, children’s ability to recite the count list is tested by asking them to count as high as they can. Sometimes researchers record the child’s initial highest count – the point they reach before they make their first error or omission. Sometimes they also record their final highest count – the number they reach after recovering from an error, or after a protocol of prompts (depending on the methods of a particular study).
+	</p>
+	<p>Numberbank represents children’s highest counts and by default displays only initial counts.
+	</p>
+
+	<h3>References</h3>
 	<p>Fuson, K. C. (1988). <i>Children’s counting and concepts of number.</i> New York: Springer-Verlag.</i></p>
 	<p>Gelman, R. and Gallistel, C. R.: 1978, <i>The Child's Understanding of Number</i>, Harvard University Press, Cambridge.</p>
 	<p>Wynn, K. (1990). Children's understanding of counting. <i>Cognition</i>, 36(2), 155-193.</p>
