--- a/shiny_app/home.html
+++ b/shiny_app/home.html
@@ -1,15 +1,12 @@
 <html>
 <body>
-<div id="homeContent">
-    <div id="descrLg" class="text-muted nbDescrip">Collaborative Database of Children's Numerical Language
+<div id="homeContent" class="tabContent">
+    <div id="descrLg" class="nbDescrip">Collaborative Database of Children's Numerical Language
 	</div><br>
-	<div class="text-muted nbDescrip descrSm">Numberbank includes data from 3200+ children, across 13+ languages
+	<div id="descrSmTop" class="nbDescrip descrSm">Numberbank includes numeracy data from 3200 children across 13 languages around the world
 	</div>
 	<img id="descrImg" src = "img/dotsLogoStatic.png">
-	<div class="text-muted descrSm">
-		NumberBank aggregates anonymized numeracy data from children around the world, allowing researchers to contribute, download, and analyze large and diverse datasets.
-	</div>
-	<div class="text-muted descrSm">
+	<div id="descrSmBottom" class="descrSm">
 		NumberBank operates in collaboration with the ManyNumbers consortium of 100+ international researchers interested in early numerical development.
 	</div>
 </div>
