debugged jumpy initiating contributor css

--- a/shiny_app/about.html
+++ b/shiny_app/about.html
@@ -66,10 +66,12 @@ a.descLink:active {
 	max-width: 150px;
 }
 
+
+
 </style>
 </head>
 <body>
-	<div class="tabContent">
+	<div class="tabContent" id="authorsCol">
 		<div class="teamCol">
 			<div class="head">The Numberbank Team</div>
 			<br>
