other csv and css files I haven't updated in awhile

--- a/shiny_app/about.html
+++ b/shiny_app/about.html
@@ -76,31 +76,31 @@ a.descLink:active {
 			<div class="head">The Numberbank Team</div>
 			<br>
 			<div class = "responsive">
-				<div class="gallery">
+				<div class="gallery"><a class="descLink" href="https://la-oey.github.io/" target="_blank" rel="noopener noreferrer">
 					<img src="img/oey.png" alt="Oey" class="teamImg">
-					<div class="desc"><a class="descLink" href="https://la-oey.github.io/" target="_blank" rel="noopener noreferrer">Lauren Oey</a></div>
-				</div>
+					<div class="desc">Lauren Oey</div>
+				</a></div>
 			</div>
 
 			<div class = "responsive">
-				<div class="gallery">
+				<div class="gallery"><a class="descLink" href="https://rosemschneider.github.io/" target="_blank" rel="noopener noreferrer">
 					<img src="img/schneider.jpeg" alt="Schneider" class="teamImg">
-					<div class="desc"><a class="descLink" href="https://rosemschneider.github.io/" target="_blank" rel="noopener noreferrer">Rose Schneider</a></div>
-				</div>
+					<div class="desc">Rose Schneider</div>
+				</a></div>
 			</div>
 
 			<div class = "responsive">
-				<div class="gallery">
+				<div class="gallery"><a class="descLink" href="https://www.ladlab.com/barner" target="_blank" rel="noopener noreferrer">
 					<img src="img/barner.jpeg" alt="Barner" class="teamImg">
-					<div class="desc"><a class="descLink" href="https://www.ladlab.com/barner" target="_blank" rel="noopener noreferrer">David Barner</a></div>
-				</div>
+					<div class="desc">David Barner</div>
+				</a></div>
 			</div>
 
 			<div class = "responsive">
-				<div class="gallery">
+				<div class="gallery"><a class="descLink" href="https://web.stanford.edu/~mcfrank/" target="_blank" rel="noopener noreferrer">
 					<img src="img/mike.jpg" alt="Frank" class="teamImg">
-					<div class="desc"><a class="descLink" href="https://web.stanford.edu/~mcfrank/" target="_blank" rel="noopener noreferrer">Mike Frank</a></div>
-				</div>
+					<div class="desc">Mike Frank</div>
+				</a></div>
 			</div>
 		</div>
 	</div>
