pushed update Dec 2023

--- a/shiny_app/home.html
+++ b/shiny_app/home.html
@@ -9,6 +9,13 @@
 	<div id="descrSmBottom" class="descrSm">
 		NumberBank operates in collaboration with the ManyNumbers consortium of 100+ international researchers interested in early numerical development.
 	</div>
+	<div class="disclaimer">
+		<img id = "disclaimerImg" src = "img/nsf_logo.png">
+		<div id = "disclaimerTxt">
+		This material is based upon work supported by the National Science Foundation under Grant No. 221960.
+		Any opinions, findings, and conclusions or recommendations expressed in this material are those of the authors and do not necessarily reflect the views of the National Science Foundation.
+		</div>
+	</div>
 </div>
 </body>
 </html>
